# bvoa

./: .gitignore  README.md  install.sh  pyproject.toml
app/: __init__.py
app/controllers/: main_form.py
app/templates/: StatusForm.html  base.html  index.html  thank_you.html
docker/: README.md  compose.yml  docker-compose.yml  dot_env
docker/docker/ubuntu/: Dockerfile  install-as-user.sh  install.sh
