# Project managed using poetry

[tool.poetry]
name = "bvoa"
version = "1.0.0"
authors = ["George S. Hugh <hughgs@duke.edu>"]
description = "Display mod preferences for SWGOH teams"
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
flask = "*"
werkzeug = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
psycopg2-binary = "*"
flask-login = "*"
email-validator = "*"
faker = "^19.3.1"
python-dotenv = "*"
bootstrap-flask = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
