# Project managed using poetry

[tool.poetry]
name = "bvoa"
version = "1.0.0"
authors = ["George S. Hugh <hughgs@duke.edu>"]
description = "Display mod preferences for SWGOH teams"
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
flask = "*"
werkzeug = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
psycopg2-binary = "^2.9.12"
flask-login = "*"
email-validator = "*"
faker = "*"
python-dotenv = "*"
bootstrap-flask = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
